--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <Button
-        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
         android:id="@+id/logoutButton"
-        android:text="@string/logoutButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/logoutButton" />
+
+    <Button
+        android:id="@+id/offerParkingBtn"
+        android:textAllCaps="false"
+        android:layout_marginTop="100dp"
+        android:layout_width="250dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/offerParkingLabel" />
+
+    <Button
+        android:id="@+id/rentParkingBtn"
+        android:textAllCaps="false"
+        android:layout_marginTop="10dp"
+        android:layout_width="250dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/rentParkingLabel" />
+
 
 </LinearLayout>
