Enhanced design of rent activity #8

--- a/app/src/main/res/layout/parking_offer_item.xml
+++ b/app/src/main/res/layout/parking_offer_item.xml
@@ -1,53 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    android:padding="10dp"
+    android:paddingHorizontal="15dp"
+    android:paddingVertical="5dp"
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="110dp">
 
     <TextView
-        android:id="@+id/locationLabel"
-        android:text="Location:"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:layout_marginLeft="20dp"
-        android:layout_toEndOf="@+id/locationLabel"
-        android:id="@+id/address"
+        android:textSize="20sp"
+        android:id="@+id/location"
         android:text="Namir 10, Tel Aviv"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/locationLabel" />
-
-    <TextView
-        android:layout_marginTop="5dp"
-        android:layout_below="@id/locationLabel"
-        android:id="@+id/priceLabel"
-        android:text="Price per hour:"
-        android:layout_width="100dp"
         android:layout_height="wrap_content" />
 
     <TextView
-        android:layout_marginTop="5dp"
-        android:layout_marginLeft="20dp"
-        android:text="20.25 NIS"
+        android:textAlignment="center"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:textSize="20sp"
+        android:text="8.25 $/Hr"
         android:id="@+id/pricePerHour"
-        android:layout_below="@id/address"
-        android:layout_toRightOf="@+id/priceLabel"
-        android:layout_toEndOf="@id/priceLabel"
+        android:layout_below="@id/location"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true" />
+
+    <TextView
+        android:layout_marginTop="20dp"
+        android:id="@+id/availableTime"
+        android:text="19/11/18 14:00 to 19/11/18 17:00"
+        android:layout_below="@id/location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <TextView
-        android:layout_marginTop="5dp"
-        android:text="Available from .... to ...."
-        android:layout_below="@id/priceLabel"
-        android:id="@+id/availability"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    <Button
+        android:layout_below="@id/pricePerHour"
+        android:id="@+id/bookBtn"
+        android:layout_alignParentEnd="true"
+        android:textAllCaps="false"
+        android:text="@string/book"
+        android:layout_width="100dp"
+        android:layout_height="65dp"
+        android:layout_alignParentRight="true" />
 
     <View
-        android:layout_marginTop="5dp"
-        android:layout_below="@+id/availability"
+        android:id="@+id/sep"
+        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@android:color/darker_gray"/>
