added time slots display to Order activity #10

--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -82,6 +82,13 @@
             android:layout_height="wrap_content" />
     </LinearLayout>
 
+    <ListView
+        tools:listitem="@layout/time_slot_item"
+        android:id="@+id/time_slots"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </ListView>
+
     <Button
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
