--- a/app/src/main/res/layout/time_slot_item.xml
+++ b/app/src/main/res/layout/time_slot_item.xml
@@ -20,9 +20,8 @@
         android:layout_weight="1"
         android:layout_height="wrap_content" />
 
-    <Button
-        android:id="@+id/bookBtn"
-        android:text="@string/book"
+    <CheckBox
+        android:id="@+id/checkForOrder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
