enhanced the design of order activity #10

--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="10dp"
     tools:context=".OrderActivity">
 
     <TextView
@@ -83,14 +84,16 @@
     </LinearLayout>
 
     <ListView
+        android:layout_weight="1"
+        android:layout_marginTop="30dp"
         tools:listitem="@layout/time_slot_item"
         android:id="@+id/time_slots"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp">
     </ListView>
 
     <Button
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_gravity="center"
         android:id="@+id/orderButton"
         android:layout_width="wrap_content"
