--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -72,7 +72,7 @@
         android:layout_marginTop="15dp"
         android:scaleType="centerCrop"
         android:id="@+id/place_info"
-        android:src="@drawable/ic_info"/>
+        android:src="@drawable/ic_shopping_cart_black_24dp"/>
 
     <ImageView
         android:layout_width="40dp"
